# sec-edgar-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  run_10k_forever.sh  sec-edgar-pipeline.sql
src/: 01_idx_eda.ipynb  02_sec_financials.ipynb  03_data_exploration_sec.ipynb  8k_filings.ipynb  build_sec_index_urls.py  combine_10k_parts.py  combine_filing_parts.py  download_10k_html_stream.py  download_company_idx.py  fetch_10k_html.py  fetch_10k_html_batch.py  fetch_index_html_link.py  filter_10k_stream.py  filter_filings.py  parse_idx.py  partition_2_quarters.py  transform_txt_2_pqt.py  verify_txt_2_pqt.py
src/.ipynb_checkpoints/: 01_idx_eda-checkpoint.ipynb  parse_idx-checkpoint.py
src/common/: config.py  imports.py
