[project]
name = "sec-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.31",
    "google-cloud-storage>=3.8.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
]
